# spire-plugin-rs

./: Cargo.toml  README.md  build.rs
examples/dummy-node-attestor/: Cargo.toml  README.md
examples/dummy-workload-attestor/: Cargo.toml  README.md
examples/dummy-workload-attestor-host/: Cargo.toml
examples/dummy-workload-attestor-host/src/: main.rs
examples/dummy-workload-attestor/src/: main.rs
proto/spire/: README.md
src/: proto.rs
