[workspace]
resolver = "2"
members = ["examples/*"]

[package]
name = "spire-plugin"
version = "0.0.0"
authors = ["Konge <zkonge@outlook.com>"]
edition = "2021"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", default-features = false, features = [
    "codegen",
    "prost",
] }

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = [
    "agent-keymanager",
    "agent-nodeattestor",
    "agent-svidstore",
    "agent-workloadattestor",

    "server-bundlepublisher",
    "server-credentialcomposer",
    "server-keymanager",
    "server-nodeattestor",
    "server-notifier",
    "server-upstreamauthority",
]

agent-keymanager = []
agent-nodeattestor = []
agent-svidstore = []
agent-workloadattestor = []

server-bundlepublisher = []
server-credentialcomposer = []
server-keymanager = []
server-nodeattestor = []
server-notifier = []
server-upstreamauthority = []
