[workspace]
resolver = "2"
members = ["examples/*"]

[workspace.dependencies]
tokio = { version = "1.42.0", features = ["rt"] }
futures-util = { version = "0.3.31", default-features = false }
pluginx = { git = "https://github.com/zkonge/pluginx.git" }
spire-plugin = { path = "." }

[package]
name = "spire-plugin"
version = "0.0.0"
authors = ["Konge <zkonge@outlook.com>"]
edition = "2021"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", default-features = false, features = [
    "codegen",
    "prost",
] }

[build-dependencies]
tonic-build = "0.12.3"

[features]
default = [
    "agent-keymanager",
    "agent-nodeattestor",
    "agent-svidstore",
    "agent-workloadattestor",

    "server-bundlepublisher",
    "server-credentialcomposer",
    "server-keymanager",
    "server-nodeattestor",
    "server-notifier",
    "server-upstreamauthority",
]

agent-keymanager = []
agent-nodeattestor = []
agent-svidstore = []
agent-workloadattestor = []

server-bundlepublisher = []
server-credentialcomposer = []
server-keymanager = []
server-nodeattestor = []
server-notifier = []
server-upstreamauthority = []
