[package]
name = "dummy-node-attestor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt"] }
pluginx = { git = "https://github.com/zkonge/pluginx.git" }
spire-plugin = { path = "../../" }
futures = { version = "0.3.30", default-features = false }
hcl-rs = "0.18.0"
serde = { version = "1.0.197", features = ["derive"] }

[[bin]]
name = "dummy-node-attestor-server"
path = "src/bin/server.rs"

[[bin]]
name = "dummy-node-attestor-client"
path = "src/bin/client.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
