[package]
name = "dummy-node-attestor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
futures-util.workspace = true
pluginx.workspace = true
spire-plugin.workspace = true

hcl-rs = "0.18.2"
serde = { version = "1.0.217", features = ["derive"] }

[[bin]]
name = "dummy-node-attestor-server"
path = "src/bin/server.rs"

[[bin]]
name = "dummy-node-attestor-client"
path = "src/bin/client.rs"
